TAG: pdfdownload-6-0-19-9
TAG: pdfdownload-6-0-19-8
DATE: 06/17/2022
STAFF: sc
CHANGES: https://mgi-jira.atlassian.net/browse/CRM-237 - added 14 new 
    elsevier journals - this tag being release with pdfdownload-6-0-19-7

TAG: pdfdownload-6-0-19-7
TAG: pdfdownload-6-0-19-6
DATE: 06/13/2022
STAFF: sc
CHANGES: WTS2-887 PDF files in the pdfdownload folder not being unzipped
-  

TAG: pdfdownload-6-0-19-5
TAG: pdfdownload-6-0-19-4
TAG: pdfdownload-6-0-19-3
DATE: 05/09/2022
STAFF: sc
CHANGES: WTS2-766 PMC PDF Downloader creating reference objects for Supplemental Data

TAG: pdfdownload-6-0-19-2
DATE: 05/09/2022
STAFF: sc
CHANGES: change baseUrl to https: pmc/identify_missed_papers_plos.py

TAG: pdfdownload-6-0-19-1
DATE: 05/05/2022
STAFF: sc
CHANGES: wts2-865 Elsevier/SciDirect PDF download error (for refs without a title)
 
TAG: pdfdownload-6-0-18-3
DATE: 2/08/2022
STAFF: jak
CHANGES: PMC download now catches and logs http errors
WTS2-812

TAG: pdfdownload-6-0-18-2
DATE: 2/08/2022
STAFF: jak
CHANGES: Revamped noPDF file/email generation to include num weeks left
        on the report & number of download failures
WTS2-771

TAG: pdfdownload-6-0-18-1
DATE: 1/28/2022
STAFF: jak
CHANGES: PMC download omits downloads for pdfs that don't have PMID in PMC
         Improved logging.
WTS2-771

TAG: pdfdownload-6-0-17-6
DATE: 12/10/2021
STAFF: jak
CHANGES: merged 6-0-16-2 back in, this commit got lost from Jon's work below
since it never got merged into master.
TR13344/WTS2-521 - chg downloaded PDF filenames to PMID_####.pdf

TAG: pdfdownload-6-0-17-5
DATE: 11/12/2021
STAFF: dbm
CHANGES: fixed download_elsevier_papers.py to handle date parameters when no jounal name is passed

TAG: pdfdownload-6-0-17-4
DATE: 10/20/2021
STAFF: jsb
CHANGES: more PMC and more SciDirect journals

TAG: pdfdownload-6-0-17-3
DATE: 07/26/2021
STAFF: jsb
CHANGES: brought in 17 journals from Elsevier's SciDirect

TAG: pdfdownload-6-0-17-2
DATE: 07/21/2021
STAFF: jsb